Added more allowed errors